Changed favicon, fixed section title names, added correct contact info

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!--====== Title ======-->
-    <title>Unfold - Personal Portfolio & CV Template</title>
+    <title>Andevon - Ottawa Business Consulting</title>
 
     <!--====== Favicon Icon ======-->
-    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="assets/images/logo-black.png" type="image/png">
 
     <!--====== Bootstrap css ======-->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -284,8 +284,8 @@
             <div class="row">
                 <div class="col-lg-8">
                     <div class="section-title pb-25">
-                        <h2 class="title">My Recent Works</h2>
-                        <p>Nunc id dui at sapien faucibus fermentum ut vel diam. Nullam tempus, nunc id efficitur sagittis, urna est ultricies eros, ac porta sem turpis quis leo.</p>
+                        <h2 class="title">Why Andevon?</h2>
+                        <p>Include a bunch of references here.</p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
@@ -542,7 +542,7 @@
                 <div class="col-lg-8">
                     <div class="section-title text-center pb-25">
                         <h2 class="title">Get In Touch</h2>
-                        <p>Nunc id dui at sapien faucibus fermentum ut vel diam. Nullam tempus, nunc id efficitur sagittis, urna est ultricies eros, ac porta sem turpis quis leo.</p>
+                        <p>Positive change starts here. Contact us for a free one hour consulation.</p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
@@ -554,7 +554,7 @@
                         </div>
                         <div class="contact-content">
                             <h6 class="contact-title">Address</h6>
-                            <p>123 Stree New York City , United States Of America 750</p>
+                            <p>110-35 Auriga Drive, Ottawa ON</p>
                         </div>
                     </div> <!-- contact box -->
                 </div>
@@ -565,8 +565,7 @@
                         </div>
                         <div class="contact-content">
                             <h6 class="contact-title">Phone</h6>
-                            <p>+931 2222 5555</p>
-                            <p>+547 5554 6663</p>
+                            <p>(613) 863-8546</p>
                         </div>
                     </div> <!-- contact box -->
                 </div>
@@ -577,8 +576,7 @@
                         </div>
                         <div class="contact-content">
                             <h6 class="contact-title">Email</h6>
-                            <p>support@yourmail.com</p>
-                            <p>info@helpline.com</p>
+                            <a href="mailto:consulting@andevon.com">consulting@andevon.com</a>
                         </div>
                     </div> <!-- contact box -->
                 </div>
@@ -606,8 +604,8 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="contact-map mt-60">
-                        <div class="gmap_canvas">                            
-                            <iframe id="gmap_canvas" src="https://maps.google.com/maps?q=Mission%20District%2C%20San%20Francisco%2C%20CA%2C%20USA&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                        <div class="gmap_canvas">          
+                            <iframe id="gmap_canvas" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2804.88564347472!2d-75.7064007842365!3d45.33093165034653!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce07c334faaaab%3A0x426f00c4b48bdc9!2s35%20Auriga%20Dr%20%23110%2C%20Nepean%2C%20ON%20K2E%208B7!5e0!3m2!1sen!2sca!4v1617049004809!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>                  
                         </div>
                     </div> <!-- contact map -->
                 </div>
