Fixed links in services, added better icons

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                             <h4 class="title">Every business has a story.</h4>
                             <h1 class="sub-title">Let us help you write yours.</h1>
                             <p>Lorem Ipsum</p>
-                            <a class="main-btn" href="#contact">Get a Free Consultation</a>
+                            <a class="main-btn" class="page-scroll" href="#contact">Get a Free Consultation</a>
                         </div> <!-- header content right -->
                     </div>
                     <div class="col-lg-6 offset-xl-1">
@@ -196,10 +196,10 @@
                 <div class="col-lg-4 col-md-6 col-sm-8">
                     <div class="single-service text-center mt-30">
                         <div class="service-icon">
-                            <i class="lni-code-alt"></i>
+                            <i class="lni-keyword-research"></i>
                         </div>
                         <div class="service-content">
-                            <h4 class="service-title"><a href="#">Competition Intelligence</a></h4>
+                            <h4 class="service-title"><a class="page-scroll" href="#contact">Competition Intelligence</a></h4>
                             <p>Curabitur vitae magna felis. Nulla ac libero ornare, vestibulum lacus quis blandit enimdicta sunt.</p>
                         </div>
                     </div> <!-- single service -->
@@ -207,10 +207,10 @@
                 <div class="col-lg-4 col-md-6 col-sm-8">
                     <div class="single-service text-center mt-30">
                         <div class="service-icon">
-                            <i class="lni-color-pallet"></i>
+                            <i class="lni-target-audience"></i>
                         </div>
                         <div class="service-content">
-                            <h4 class="service-title"><a href="#contact">Customer Research</a></h4>
+                            <h4 class="service-title"><a class="page-scroll" href="#contact">Customer Research</a></h4>
                             <p>Curabitur vitae magna felis. Nulla ac libero ornare, vestibulum lacus quis blandit enimdicta sunt.</p>
                         </div>
                     </div> <!-- single service -->
@@ -218,10 +218,10 @@
                 <div class="col-lg-4 col-md-6 col-sm-8">
                     <div class="single-service text-center mt-30">
                         <div class="service-icon">
-                            <i class="lni-mobile"></i>
+                            <i class="lni-network"></i>
                         </div>
                         <div class="service-content">
-                            <h4 class="service-title"><a href="#">Team Training/Analysis</a></h4>
+                            <h4 class="service-title"><a class="page-scroll" href="#contact">Team Training/Analysis</a></h4>
                             <p>Curabitur vitae magna felis. Nulla ac libero ornare, vestibulum lacus quis blandit enimdicta sunt.</p>
                         </div>
                     </div> <!-- single service -->
@@ -229,10 +229,10 @@
                 <div class="col-lg-4 col-md-6 col-sm-8">
                     <div class="single-service text-center mt-30">
                         <div class="service-icon">
-                            <i class="lni-vector"></i>
+                            <i class="lni-map-marker"></i>
                         </div>
                         <div class="service-content">
-                            <h4 class="service-title"><a href="#">Temporary Placements</a></h4>
+                            <h4 class="service-title"><a class="page-scroll" href="#contact">Temporary Placements</a></h4>
                             <p>Curabitur vitae magna felis. Nulla ac libero ornare, vestibulum lacus quis blandit enimdicta sunt.</p>
                         </div>
                     </div> <!-- single service -->
@@ -240,10 +240,10 @@
                 <div class="col-lg-4 col-md-6 col-sm-8">
                     <div class="single-service text-center mt-30">
                         <div class="service-icon">
-                            <i class="lni-website"></i>
+                            <i class="lni-stats-up"></i>
                         </div>
                         <div class="service-content">
-                            <h4 class="service-title"><a href="#">Marketing</a></h4>
+                            <h4 class="service-title"><a class="page-scroll" href="#contact">Marketing</a></h4>
                             <p>Curabitur vitae magna felis. Nulla ac libero ornare, vestibulum lacus quis blandit enimdicta sunt.</p>
                         </div>
                     </div> <!-- single service -->
@@ -251,10 +251,10 @@
                 <div class="col-lg-4 col-md-6 col-sm-8">
                     <div class="single-service text-center mt-30">
                         <div class="service-icon">
-                            <i class="lni-support"></i>
+                            <i class="lni-blackboard"></i>
                         </div>
                         <div class="service-content">
-                            <h4 class="service-title"><a href="#">Coaching</a></h4>
+                            <h4 class="service-title"><a class="page-scroll" href="#contact">Coaching</a></h4>
                             <p>Curabitur vitae magna felis. Nulla ac libero ornare, vestibulum lacus quis blandit enimdicta sunt.</p>
                         </div>
                     </div> <!-- single service -->
@@ -262,10 +262,10 @@
                 <div class="col-lg-4 col-md-6 col-sm-8">
                     <div class="single-service text-center mt-30">
                         <div class="service-icon">
-                            <i class="lni-support"></i>
+                            <i class="lni-investment"></i>
                         </div>
                         <div class="service-content">
-                            <h4 class="service-title"><a href="#">Financial Practice</a></h4>
+                            <h4 class="service-title"><a class="page-scroll" href="#contact">Financial Practice</a></h4>
                             <p>Curabitur vitae magna felis. Nulla ac libero ornare, vestibulum lacus quis blandit enimdicta sunt.</p>
                         </div>
                     </div> <!-- single service -->
@@ -627,10 +627,10 @@
                             </a>
                             <p class="mt-">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci- didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exe- rcitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                             <ul>
-                                <li><a href="#"><i class="lni-facebook-filled"></i></a></li>
-                                <li><a href="#"><i class="lni-twitter-original"></i></a></li>
-                                <li><a href="#"><i class="lni-pinterest"></i></a></li>
-                                <li><a href="#"><i class="lni-linkedin-original"></i></a></li>
+                                <li><a href="https://www.facebook.com/Andevon-Inc-1669584833283930/ "><i class="lni-facebook-filled"></i></a></li>
+                                <li><a href="https://twitter.com/AndevonC "><i class="lni-twitter-original"></i></a></li>
+                                <li><a href="https://www.instagram.com/andevoncoaching/?hl=en "><i class="lni-instagram-original"></i></a></li>
+                                <li><a href="https://www.linkedin.com/company/11098280/admin/"><i class="lni-linkedin-original"></i></a></li>
                             </ul>
                         </div> <!-- footer content -->
                     </div>
