--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="index.html">
                                 <img src="assets/images/logo-black.png" alt="Logo">
-                                <h2 class="title" style="display: inline; vertical-align: middle;">ANDEVON</h2>
+                                <h2 class="title andevon-title">ANDEVON</h2>
                                 </br>
-                                <p style="text-align: center;">Our Business Is Building Yours.</p>
+                                <p class="text-center">Our Business Is Building Yours.</p>
                             </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="toggler-icon"></span>
@@ -78,6 +78,7 @@
 
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                 <ul class="navbar-nav ml-auto">
+                                    <li class="nav-item hidden"><a class="page-scroll" href="#home">Home</a></li>
                                     <li class="nav-item"><a class="page-scroll" href="#service">Services</a></li>
                                     <li class="nav-item"><a class="page-scroll" href="#whyAndevon">Why Andevon</a></li>
                                     <li class="nav-item"><a class="page-scroll" href="#about">About</a></li>
@@ -187,8 +188,10 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="section-title text-center pb-30">
-                        <h2 class="title">My Services</h2>
-                        <p>Nunc id dui at sapien faucibus fermentum ut vel diam. Nullam tempus, nunc id efficitur sagittis, urna est ultricies eros, ac porta sem turpis quis leo.</p>
+                        <h2 class="title">Our Services</h2>
+                        <p>We have expertise in many areas of business and management. We can help you make better decisions,
+                            offer third-party ideas, and ultimately improve your business. And we can do this all while you 
+                            focus on what matters most—running your day-to-day business.</p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
@@ -200,7 +203,10 @@
                         </div>
                         <div class="service-content">
                             <h4 class="service-title"><a class="page-scroll" href="#contact">Competition Intelligence</a></h4>
-                            <p>Curabitur vitae magna felis. Nulla ac libero ornare, vestibulum lacus quis blandit enimdicta sunt.</p>
+                            <p>We can help you identify exactly what sets you apart from your competitors, and what you can do to
+                                increase your market capitalization. We will identify market niches and trends you can capitalize on. 
+                                If you know your enemy, you can beat them.
+                                </p>
                         </div>
                     </div> <!-- single service -->
                 </div>
@@ -211,7 +217,10 @@
                         </div>
                         <div class="service-content">
                             <h4 class="service-title"><a class="page-scroll" href="#contact">Customer Research</a></h4>
-                            <p>Curabitur vitae magna felis. Nulla ac libero ornare, vestibulum lacus quis blandit enimdicta sunt.</p>
+                            <p>Understanding what your customers want
+                                is crucial for your business. Are they happy with your product or service? Are there specific things they
+                                wish you provided, or don't care about? We can find these answers, and help you create more loyal and 
+                                profitable customers.</p>
                         </div>
                     </div> <!-- single service -->
                 </div>
@@ -222,18 +231,24 @@
                         </div>
                         <div class="service-content">
                             <h4 class="service-title"><a class="page-scroll" href="#contact">Team Training/Analysis</a></h4>
-                            <p>Curabitur vitae magna felis. Nulla ac libero ornare, vestibulum lacus quis blandit enimdicta sunt.</p>
+                            <p>Your team is the backbone and face of your business. They are your biggest asset—and they can mean the 
+                                difference between failure and success. We can help you create, expand, or improve your existing 
+                                team, and ensure they are as cohesive and as productive as possible.
+                                </p>
                         </div>
                     </div> <!-- single service -->
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-8">
                     <div class="single-service text-center mt-30">
                         <div class="service-icon">
-                            <i class="lni-map-marker"></i>
+                            <i class="lni-seo-consulting"></i>
                         </div>
                         <div class="service-content">
                             <h4 class="service-title"><a class="page-scroll" href="#contact">Temporary Placements</a></h4>
-                            <p>Curabitur vitae magna felis. Nulla ac libero ornare, vestibulum lacus quis blandit enimdicta sunt.</p>
+                            <p>If you need someone now, and don't have time to recruit, we can act as an employee. Whether you need a temporary
+                                senior manager, a seasoned fixed-term project manager, technical expertise, or even some creative infusion, we can
+                                fill the gap in your business.
+                            </p>
                         </div>
                     </div> <!-- single service -->
                 </div>
@@ -244,7 +259,10 @@
                         </div>
                         <div class="service-content">
                             <h4 class="service-title"><a class="page-scroll" href="#contact">Marketing</a></h4>
-                            <p>Curabitur vitae magna felis. Nulla ac libero ornare, vestibulum lacus quis blandit enimdicta sunt.</p>
+                            <p>Your brand, image, and presence are crucial no matter how new or well-established your business is. Are you 
+                                advertising in the right places? Are your marketing campaigns successful? Are you getting the best bang for
+                                your buck? We can help you answer these, and pinpoint areas for improvement.
+                            </p>
                         </div>
                     </div> <!-- single service -->
                 </div>
@@ -255,7 +273,10 @@
                         </div>
                         <div class="service-content">
                             <h4 class="service-title"><a class="page-scroll" href="#contact">Coaching</a></h4>
-                            <p>Curabitur vitae magna felis. Nulla ac libero ornare, vestibulum lacus quis blandit enimdicta sunt.</p>
+                            <p>If you need input for a major decision, or need to brainstorm a solution, we can be there to help.
+                                We can help offer neutral third-party ideas, free of vested interests. Sometimes all it takes is an
+                                outside perspective—look no further.
+                            </p>
                         </div>
                     </div> <!-- single service -->
                 </div>
@@ -266,7 +287,8 @@
                         </div>
                         <div class="service-content">
                             <h4 class="service-title"><a class="page-scroll" href="#contact">Financial Practice</a></h4>
-                            <p>Curabitur vitae magna felis. Nulla ac libero ornare, vestibulum lacus quis blandit enimdicta sunt.</p>
+                            <p>We can help you improve your bottom line. We can create Business Plans, help you acquire Venture 
+                                Capital funding, act as your virtual CFOs, and much more.</p>
                         </div>
                     </div> <!-- single service -->
                 </div>
@@ -285,7 +307,7 @@
                 <div class="col-lg-8">
                     <div class="section-title pb-25">
                         <h2 class="title">Why Andevon?</h2>
-                        <p>Include a bunch of references here.</p>
+                        <p>Include a bunch of references/noteworthy achievements here.</p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
@@ -406,7 +428,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="section-title text-center">
-                        <h2 class="title">About Me</h2>
+                        <h2 class="title">About Us</h2>
                         <p>Nunc id dui at sapien faucibus fermentum ut vel diam. Nullam tempus, nunc id efficitur sagittis, urna est ultricies eros, ac porta sem turpis quis leo.</p>
                     </div> <!-- section title -->
                 </div>
@@ -542,7 +564,7 @@
                 <div class="col-lg-8">
                     <div class="section-title text-center pb-25">
                         <h2 class="title">Get In Touch</h2>
-                        <p>Positive change starts here. Contact us for a free one hour consulation.</p>
+                        <h5>Positive change starts here. Contact us for a free one hour consulation.</h5>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
