Added content to the About section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
-                            <a class="navbar-brand" href="index.html">
+                            <a class="navbar-brand page-scroll" href="#home">
                                 <img src="assets/images/logo-black.png" alt="Logo">
                                 <h2 class="title andevon-title">ANDEVON</h2>
                                 </br>
@@ -129,7 +129,7 @@
                             <h4 class="title">Every business has a story.</h4>
                             <h1 class="sub-title">Let us help you write yours.</h1>
                             <p>Lorem Ipsum</p>
-                            <a class="main-btn" class="page-scroll" href="#contact">Get a Free Consultation</a>
+                            <a class="main-btn page-scroll" href="#contact">Get a Free Consultation</a>
                         </div> <!-- header content right -->
                     </div>
                     <div class="col-lg-6 offset-xl-1">
@@ -429,128 +429,51 @@
                 <div class="col-lg-8">
                     <div class="section-title text-center">
                         <h2 class="title">About Us</h2>
-                        <p>Nunc id dui at sapien faucibus fermentum ut vel diam. Nullam tempus, nunc id efficitur sagittis, urna est ultricies eros, ac porta sem turpis quis leo.</p>
+                        <p>Founded in 1995, we have consulted to a wide range of companies, from start-ups to Fortune 100 companies.
+                            We know that what matters most is finding someone you can trust who can actually add value to your company,
+                            and won't burn you.
+                        </p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
+            <br/>
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="about-content mt-50">
-                        <h5 class="about-title">Hi There! I'm Mark Parker</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                        <ul class="clearfix">
-                            <li>
-                                <div class="single-info d-flex align-items-center">
-                                    <div class="info-icon">
-                                        <i class="lni-calendar"></i>
-                                    </div>
-                                    <div class="info-text">
-                                        <p><span>Date of birth:</span> 8 June 1995</p>
-                                    </div>
-                                </div> <!-- single info -->
-                            </li>
-                            <li>
-                                <div class="single-info d-flex align-items-center">
-                                    <div class="info-icon">
-                                        <i class="lni-envelope"></i>
-                                    </div>
-                                    <div class="info-text">
-                                        <p><span>Email:</span> parker@mysite.com</p>
-                                    </div>
-                                </div> <!-- single info -->
-                            </li>
-                            <li>
-                                <div class="single-info d-flex align-items-center">
-                                    <div class="info-icon">
-                                        <i class="lni-phone-handset"></i>
-                                    </div>
-                                    <div class="info-text">
-                                        <p><span>Phone:</span> +1-202-555-0138</p>
-                                    </div>
-                                </div> <!-- single info -->
-                            </li>
-                            <li>
-                                <div class="single-info d-flex align-items-center">
-                                    <div class="info-icon">
-                                        <i class="lni-map-marker"></i>
-                                    </div>
-                                    <div class="info-text">
-                                        <p><span>Location:</span> 4373, El Centro, CA</p>
-                                    </div>
-                                </div> <!-- single info -->
-                            </li>
-                        </ul>
+                    <div class="about-content mt-25">
+                        <h4>Tom Johnson</h4>
+                        <h5 class="about-title">Managing Partner</h5>
+                        <p>Tom has over 30 years experience creating and launching companies developing world class products in telecommunications,
+                            networking and satellite communications. He has a proven track record of product and business development, creating 
+                            high growth and high margin offerings. He has helped companies in a wide range of industries and served on a 
+                            number of boards. He loves marketing and sales and motivating people.</p>
                     </div> <!-- about content -->
                 </div>
                 <div class="col-xl-5 offset-xl-1 col-lg-6">
-                    <div class="about-skills pt-25">
-                        <div class="skill-item mt-25">
-                            <div class="skill-header">
-                                <h6 class="skill-title">HTML</h6>
-                                <div class="skill-percentage">
-                                    <div class="count-box counted">
-                                        <span class="counter">80</span>
-                                    </div>
-                                    %
-                                </div>
-                            </div>
-                            <div class="skill-bar">
-                                <div class="bar-inner">
-                                    <div class="bar progress-line" data-width="80"></div>
-                                </div>
-                            </div>
-                        </div> <!-- skill item -->
-                        <div class="skill-item mt-25">
-                            <div class="skill-header">
-                                <h6 class="skill-title">CSS</h6>
-                                <div class="skill-percentage">
-                                    <div class="count-box counted">
-                                        <span class="counter">60</span>
-                                    </div>
-                                    %
-                                </div>
-                            </div>
-                            <div class="skill-bar">
-                                <div class="bar-inner">
-                                    <div class="bar progress-line" data-width="60"></div>
-                                </div>
-                            </div>
-                        </div> <!-- skill item -->
-                        <div class="skill-item mt-25">
-                            <div class="skill-header">
-                                <h6 class="skill-title">Photoshop</h6>
-                                <div class="skill-percentage">
-                                    <div class="count-box counted">
-                                        <span class="counter">50</span>
-                                    </div>
-                                    %
-                                </div>
-                            </div>
-                            <div class="skill-bar">
-                                <div class="bar-inner">
-                                    <div class="bar progress-line" data-width="50"></div>
-                                </div>
-                            </div>
-                        </div> <!-- skill item -->
-                        <div class="skill-item mt-25">
-                            <div class="skill-header">
-                                <h6 class="skill-title">Sketch</h6>
-                                <div class="skill-percentage">
-                                    <div class="count-box counted">
-                                        <span class="counter">90</span>
-                                    </div>
-                                    %
-                                </div>
-                            </div>
-                            <div class="skill-bar">
-                                <div class="bar-inner">
-                                    <div class="bar progress-line" data-width="90"></div>
-                                </div>
-                            </div>
-                        </div> <!-- skill item -->
+                    <div class="about-img pt-25">
+                        <img src="assets/images/about/tom_300x249.jpg" alt="Tom Johnson" />
                     </div> <!-- about skills -->
                 </div>
             </div> <!-- row -->
+            <hr/>
+            <div class="row">
+                <div class="col-xl-5 offset-xl-1 col-lg-6">
+                    <div class="about-img pt-25">
+                        <img src="assets/images/about/jim_300x249.jpg" alt="Jim Cummings"/>
+                    </div> <!-- about skills -->
+                </div>
+                <div class="col-lg-6">
+                    <div class="about-content mt-25">
+                        <h4>James Cummings</h4>
+                        <h5 class="about-title">Managing Partner</h5>
+                        <p>Jim has successfully founded multiple businesses in a variety of industries over the past 27 years. As an early-stage 
+                            investor, he has helped guide the progress of many more. Jim has core expertise in Entrepreneurship, Business
+                            Development, Operations, Sales, Finance, and Human Resources Management. He excels at taking ideas from concept 
+                            to evaluation and fruition.</p>
+                    </div> <!-- about content -->
+                </div>
+            </div> <!-- row -->
+
+
         </div> <!-- container -->
     </section>
 
