--- a/index.html
+++ b/index.html
@@ -307,112 +307,44 @@
                 <div class="col-lg-8">
                     <div class="section-title pb-25">
                         <h2 class="title">Why Andevon?</h2>
-                        <p>Include a bunch of references/noteworthy achievements here.</p>
+                        <p>We have the expertise and the experience to help your company succeed. We focus on strategies that
+                            will make a demonstrable improvement in your company. Here are a few of our past achievements.
+                        </p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="single-work text-center mt-30">
-                        <div class="work-image">
-                            <img src="assets/images/work/w-1.jpg" alt="work">
-                        </div>
-                        <div class="work-overlay">
-                            <div class="work-content">
-                                <h3 class="work-title">Product Design</h3>
-                                <ul>
-                                    <li><a class="image-popup" href="assets/images/work/w-1.jpg"><i class="lni-plus"></i></a></li>
-                                    <li><a href="#"><i class="lni-link"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
+                    <div class="single-work text-center mt-60">
+                        <h3>We've helped a company secure more then <b>$20 million</b> in funding.</h3>
                     </div> <!-- single work -->
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="single-work text-center mt-30">
-                        <div class="work-image">
-                            <img src="assets/images/work/w-2.jpg" alt="work">
-                        </div>
-                        <div class="work-overlay">
-                            <div class="work-content">
-                                <h3 class="work-title">Product Design</h3>
-                                <ul>
-                                    <li><a class="image-popup" href="assets/images/work/w-2.jpg"><i class="lni-plus"></i></a></li>
-                                    <li><a href="#"><i class="lni-link"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
+                    <div class="single-work text-center mt-60">
+                        <h3>We've helped save <b>$70 million</b> for a Telecommunications company.</h3>
                     </div> <!-- single work -->
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="single-work text-center mt-30">
-                        <div class="work-image">
-                            <img src="assets/images/work/w-3.jpg" alt="work">
-                        </div>
-                        <div class="work-overlay">
-                            <div class="work-content">
-                                <h3 class="work-title">Product Design</h3>
-                                <ul>
-                                    <li><a class="image-popup" href="assets/images/work/w-3.jpg"><i class="lni-plus"></i></a></li>
-                                    <li><a href="#"><i class="lni-link"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
+                </div><div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-work text-center mt-60">
+                        <h3>We closed the first Government sales for a company, leading it to it's <b>IPO</b>.</h3>
                     </div> <!-- single work -->
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="single-work text-center mt-30">
-                        <div class="work-image">
-                            <img src="assets/images/work/w-4.jpg" alt="work">
-                        </div>
-                        <div class="work-overlay">
-                            <div class="work-content">
-                                <h3 class="work-title">Product Design</h3>
-                                <ul>
-                                    <li><a class="image-popup" href="assets/images/work/w-4.jpg"><i class="lni-plus"></i></a></li>
-                                    <li><a href="#"><i class="lni-link"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
+                </div><div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-work text-center mt-60">
+                        <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus  quae.</h3>
                     </div> <!-- single work -->
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="single-work text-center mt-30">
-                        <div class="work-image">
-                            <img src="assets/images/work/w-5.jpg" alt="work">
-                        </div>
-                        <div class="work-overlay">
-                            <div class="work-content">
-                                <h3 class="work-title">Product Design</h3>
-                                <ul>
-                                    <li><a class="image-popup" href="assets/images/work/w-5.jpg"><i class="lni-plus"></i></a></li>
-                                    <li><a href="#"><i class="lni-link"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
+                </div><div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-work text-center mt-60">
+                        <h3>Non illum, ut ducimus maganm repudiandae dolor laboriosam nam distinctio.</h3>
                     </div> <!-- single work -->
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="single-work text-center mt-30">
-                        <div class="work-image">
-                            <img src="assets/images/work/w-6.jpg" alt="work">
-                        </div>
-                        <div class="work-overlay">
-                            <div class="work-content">
-                                <h3 class="work-title">Product Design</h3>
-                                <ul>
-                                    <li><a class="image-popup" href="assets/images/work/w-6.jpg"><i class="lni-plus"></i></a></li>
-                                    <li><a href="#"><i class="lni-link"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
+                </div><div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-work text-center mt-60">
+                        <h3>Delectus deserunt fuga dicta. Laborum magnam quaerat adipisicing, elit dol ut fuga.</h3>
                     </div> <!-- single work -->
                 </div>
             </div> <!-- row -->
             <div class="row">
                 <div class="col-lg-12">
                     <div class="work-more text-center mt-50">
-                        <a class="main-btn" href="#">more works</a>
+                        <a class="main-btn page-scroll" href="#contact">Help write my success story</a>
                     </div> <!-- work more -->
                 </div>
             </div> <!-- row -->
