Added media queries for Facebook plugin and header

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div> <!-- container -->
         </div> <!-- navigation -->
 
-        <div id="parallax" class="header-content d-flex align-items-center">
+        <div class="header-content d-flex align-items-center">
 
             <div class="container">
                 <div class="row align-items-center">
@@ -99,7 +99,6 @@
                         <div class="header-content-right">
                             <h4 class="title">Every business has a story.</h4>
                             <h1 class="sub-title">Let us help you write yours.</h1>
-                            <p>Lorem Ipsum</p>
                             <a class="main-btn page-scroll" href="#contact">Get a Free Consultation</a>
                         </div> <!-- header content right -->
                     </div>
