--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             <a class="main-btn page-scroll" href="#contact">Get a Free Consultation</a>
                         </div> <!-- header content right -->
                     </div>
-                    <div class="col-lg-6 offset-xl-1 pt-150">
+                    <div class="col-lg-6 offset-xl-1">
                         
                         <!--====== FACEBOOK PLUGIN START ======-->
                         <div class="fb-page"
@@ -142,7 +142,7 @@
 
     <section id="service" class="services-area gray-bg pt-125 pb-130">
         <div class="container">
-            <div class="row justify-content-center">
+            <div class="row">
                 <div class="col-lg-8">
                     <div class="section-title text-center pb-30">
                         <h2 class="title">Our Services</h2>
