--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Andevon - Ottawa Business Consulting</title>
 
     <!--====== Favicon Icon ======-->
-    <link rel="shortcut icon" href="assets/images/logo-black.png" type="image/png">
+    <link rel="shortcut icon" href="assets/images/logos/logo-blue.png" type="image/png">
 
     <!--====== Bootstrap css ======-->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -65,10 +65,10 @@
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand page-scroll" href="#home">
-                                <img src="assets/images/logo-black.png" alt="Logo">
+                                <img src="assets/images/logos/logo-blue.png" alt="Logo">
                                 <h2 class="title andevon-title">ANDEVON</h2>
                                 </br>
-                                <p class="text-center">Our Business Is Building Yours.</p>
+                                <p class="text-center andevon-sub-title">Our Business Is Building Yours.</p>
                             </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="toggler-icon"></span>
