Added proper color to footer

--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
                         <div class="col-lg-12">
                             <div class="header-social-icon">
                                 <ul>
-                                    <li><a href="https://www.facebook.com/Andevon-Inc-1669584833283930/ "><i class="lni-facebook-filled"></i></a></li>
-                                    <li><a href="https://twitter.com/AndevonC "><i class="lni-twitter-original"></i></a></li>
-                                    <li><a href="https://www.instagram.com/andevoncoaching/?hl=en "><i class="lni-instagram-original"></i></a></li>
-                                    <li><a href="https://www.linkedin.com/company/11098280/admin/"><i class="lni-linkedin-original"></i></a></li>
+                                    <li><a href="https://www.facebook.com/Andevon-Inc-1669584833283930/" target="_blank"><i class="lni-facebook-filled"></i></a></li>
+                                    <li><a href="https://twitter.com/AndevonC" target="_blank"><i class="lni-twitter-original"></i></a></li>
+                                    <li><a href="https://www.instagram.com/andevoncoaching/?hl=en" target="_blank"><i class="lni-instagram-original"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/company/11098280/admin/" target="_blank"><i class="lni-linkedin-original"></i></a></li>
                                 </ul>
                             </div> <!-- header social -->
                         </div>
@@ -461,22 +461,14 @@
                             <p>We have built our own winning businesses and our depth of experience can help you
                                 realize your company's potential.</p>
                             <ul>
-                                <li><a href="https://www.facebook.com/Andevon-Inc-1669584833283930/ "><i class="lni-facebook-filled"></i></a></li>
-                                <li><a href="https://twitter.com/AndevonC "><i class="lni-twitter-original"></i></a></li>
-                                <li><a href="https://www.instagram.com/andevoncoaching/?hl=en "><i class="lni-instagram-original"></i></a></li>
-                                <li><a href="https://www.linkedin.com/company/11098280/admin/"><i class="lni-linkedin-original"></i></a></li>
+                                <li><a href="https://www.facebook.com/Andevon-Inc-1669584833283930/" target="_blank" rel="nofollow"><i class="lni-facebook-filled"></i></a></li>
+                                <li><a href="https://twitter.com/AndevonC" target="_blank" rel="nofollow"><i class="lni-twitter-original"></i></a></li>
+                                <li><a href="https://www.instagram.com/andevoncoaching/?hl=en" target="_blank" rel="nofollow"><i class="lni-instagram-original"></i></a></li>
+                                <li><a href="https://www.linkedin.com/company/11098280/admin/" target="_blank" rel="nofollow"><i class="lni-linkedin-original"></i></a></li>
                             </ul>
                         </div> <!-- footer content -->
-                    </div>
-                </div> <!-- row -->
-            </div> <!-- container -->
-        </div> <!-- footer widget -->
-        <div class="footer-copyright pb-20">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
                         <div class="copyright-text text-center pt-20">
-                            <p>Copyright © <span class="current-year"></span>. Template Crafted by <a href="https://uideck.com" rel="nofollow">UIdeck</a></p>
+                            <p>Copyright © <span class="current-year"></span></p>
                         </div> <!-- copyright text -->
                     </div>
                 </div> <!-- row -->
