Deleted unneeded css js and images

--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                             </ul>
                         </div> <!-- footer content -->
                         <div class="copyright-text text-center pt-20">
-                            <p>Copyright © <span class="current-year"></span></p>
+                            <p>Copyright © Andevon <span class="current-year"></span></p>
                         </div> <!-- copyright text -->
                     </div>
                 </div> <!-- row -->
@@ -501,8 +501,6 @@
     <!--====== Magnific Popup js ======-->
     <script src="assets/js/jquery.magnific-popup.min.js"></script>
 
-    <!--====== Parallax js ======-->
-    <script src="assets/js/parallax.min.js"></script>
 
     <!--====== Counter Up js ======-->
     <script src="assets/js/waypoints.min.js"></script>
