Added SEO tags and additional CSS

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <!--====== Required meta tags ======-->
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="">
+    <meta name="description" content="We have the expertise and the experience to help your company succeed. We focus on strategies that will make a demonstrable improvement in your company.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!--====== Title ======-->
-    <title>Andevon - Ottawa Business Consulting</title>
+    <title>Andevon | Ottawa Business Consulting</title>
 
     <!--====== Favicon Icon ======-->
     <link rel="shortcut icon" href="assets/images/logos/logo-blue.png" type="image/png">
@@ -66,7 +66,7 @@
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand page-scroll" href="#home">
                                 <img src="assets/images/logos/logo-blue.png" alt="Logo">
-                                <h2 class="title andevon-title">ANDEVON</h2>
+                                <h2 class="title andevon-title">Andevon</h2>
                                 </br>
                                 <p class="text-center andevon-sub-title">Our Business Is Building Yours.</p>
                             </a>
@@ -91,7 +91,7 @@
             </div> <!-- container -->
         </div> <!-- navigation -->
 
-        <div class="header-content d-flex align-items-center">
+        <div class="header-content d-flex align-items-center" title="Laptop and Notepad Jumbotron Image">
 
             <div class="container">
                 <div class="row align-items-center">
@@ -329,12 +329,12 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="about-content mt-25">
-                        <h4>Tom Johnson</h4>
+                        <h4 class="about-name">Tom Johnson</h4>
                         <h5 class="about-title">Managing Partner</h5>
                         <p>Tom has over 30 years experience creating and launching companies developing world class products in telecommunications,
                             networking and satellite communications. He has a proven track record of product and business development, creating 
                             high growth and high margin offerings. He has helped companies in a wide range of industries and served on a 
-                            number of boards. He loves marketing and sales and motivating people.</p>
+                            number of boards. He loves marketing, sales, and motivating people.</p>
                     </div> <!-- about content -->
                 </div>
                 <div class="col-xl-5 offset-xl-1 col-lg-6">
@@ -352,7 +352,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="about-content mt-25">
-                        <h4>James Cummings</h4>
+                        <h4 class="about-name">James Cummings</h4>
                         <h5 class="about-title">Managing Partner</h5>
                         <p>Jim has successfully founded multiple businesses in a variety of industries over the past 27 years. As an early-stage 
                             investor, he has helped guide the progress of many more. Jim has core expertise in Entrepreneurship, Business
@@ -375,7 +375,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="section-title text-center pb-25">
-                        <h2 class="title">Get In Touch</h2>
+                        <h2 class="title">Contact</h2>
                         <h5>Positive change starts here. Contact us for a free one hour consulation.</h5>
                     </div> <!-- section title -->
                 </div>
