--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
-                            <a class="navbar-brand page-scroll" href="#home">
+                            <a class="text-right navbar-brand page-scroll" href="#home">
                                 <img src="assets/images/logos/logo-blue.png" alt="Logo">
                                 <h2 class="title andevon-title">Andevon</h2>
                                 </br>
-                                <p class="text-center andevon-sub-title">Our Business Is Building Yours.</p>
+                                <p class="text-right andevon-sub-title">Our Business Is Building Yours.</p>
                             </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="toggler-icon"></span>
@@ -242,7 +242,7 @@
                         <div class="service-icon">
                             <i class="lni-investment"></i>
                         </div>
-                        <div class="service-content">
+                        <div class="service-content last-service">
                             <h4 class="service-title"><a class="page-scroll" href="#contact">Financial Practice</a></h4>
                             <p>We can help you improve your bottom line. We can create Business Plans, help you acquire Venture 
                                 Capital funding, act as your virtual CFOs, and much more.</p>
